welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:6: error: not found: value estSurBiscuits
  if (estSurBiscuits()) {
      ^